app/assets/stylesheets/room_profile.css.scss
// Place all the styles related to the rooms_profile object. 
//Created by Sara Neale 8/12/2013

#users_profile_container{
  overflow:hidden;
  width:remainder;
  line-height:1.5;
  font-size:12px;
  color:#5A5A5A;
  background:#fff;
  text-rendering: optimizelegibility;
  -webkit-font-smoothing: antialiased;
}

//There is a fake header in the Profile code about 50px high. The div is placed at top:0 so the content shows below the rooms header
.user_profile{
  position:absolute;
  z-index:200;
  top:0px;
  left:0px;
  font-family:"Open Sans",sans-serif
}
.user_profile p{
  font-weight:normal;
  font-size:16px;
  margin:0;
  padding:0;
  color:#f5f5f5;
}
#profile_drawer{
  width:760px; /*profile container width - drawer_handle width*/
  transition:all 1s ease-in-out;
}
nav.profile {
     position:fixed;
     top:45px;
     height:100%;
     background-color:transparent; /* your choice here */
     z-index:3; /* make sure this is the highest z-index on the page */
}
#profile_drawer_handle{
    position: absolute;
    top: 0;
    right: 0;
    height: 100%;
    background-color: rgba(0,0,0,.8); /* your choice here */
    width:40px;/*Sara add width*/
}
#profile_home_wrapper .profile_home_img_wrap{
  margin:0;
  padding:0;
  display:table;
}
.profile_home_img_wrap p{
  font-size:11px;
  white-space:nowrap;
  line-height:15px;
}
.profile_home_img_wrap{
  
  #profile_image_edit{
    display:none;

    position:absolute;
    bottom:0;
    left:2px;
    width:116px;

    background: rgba(255,255,255,.8);
    color:black;
    font-size:12px;
    margin:5px 1px;
    text-align:center;
  }
  
  #profile_image_edit a,#profile_image_edit a:hover{
    color:black;
    text-decoration: none;
  }
}

.profile_home_img_wrap:hover{
  //display change picture div here. 
  #profile_image_edit{
    display:block;
  }
}
#profile_home_wrapper figcaption{
  font-size:8px;
  display:table-row;
  white-space:nowrap;
  
}

#profile_home_wrapper td{
    width:200px;
    // background-color:white;
}
#profile_home_wrapper ul{
  margin:0;
  padding:5px 0;
}
#profile_sidebar a,#profile_sidebar a:visited{
  text-decoration:none;
  color:#f5f5f5;
  
}
#profile_home_wrapper a:hover{
  // background:rgba(0,0,0,.8);
}

#profile_home_wrapper{
  min-height:100%;
}
#fakefooter{
  height:50px;
}
#push{
  height: 50px;
  clear:both;

}
#fakeheader{
  height:41px; /*This needs to be the same as the rooms_header height*/
}

#profile_home_container{
  height:100%;
  width:720px;
  position:absolute;
  transition:left 1s ease-in-out;
  z-index:2;
  
}

#profile_sidebar{
  background: rgba(51,51,51,.8);
  width:70px;
  position:absolute;
  left:0;
  top:0px;
  bottom:0px;
  text-transform:uppercase;
  padding:0 10px;
}
#profileHome_container{
  /*margin-left is the profile_sidebar width + sidebar padding*/
  margin-left:90px;
  background: rgba(0,0,0,.8);
  position:relative;/*for close button positioning*/
  color: #f5f5f5;
  /*left transition will turn left into negative width of profile_home_container */
  transition:all 1s ease-in-out;
  height:100%;

}

#profile_sidebar li, #profile_sidebar li a{
  list-style-type: none;
  text-align:center;
  padding-top:60px;
}
#profile_sidebar li a{
  padding-top: 70px;
  
}
#profile_sidebar ul{
  font-family:"Open Sans Condensed";
  font-size:20px;
  font-weight:lighter;
  margin:0;
  padding:0;

}
#profile_sidebar li a{

}
div.spacer{
  height:100px;
}

.profile_small_top_template .profile_info_name,
.profile_small_top_optional_button_outer,
.profile_bookmarks_view .profile_info_name,
.profile_objects_view .profile_info_name{
  padding:2em;
}
#profile_upload_photos_button
{
  background-color: #0099cb;
  display: inline-block;
  color: #ffffff;
  font-size: 14px;
  font-weight: normal;
  height: 32px;
  line-height: 32px;
  width: 130px;
  text-decoration: none;
  text-align: center;
  border-radius: 3px;
}
//Sidebar Icons

#profile_home a{
  padding-top: 60px;
  height:50px;
  text-align: center;
  background: url("http://res.cloudinary.com/hpdnx5ayv/image/upload/v1375811602/homebtn-default_fllxkx.png") no-repeat center;
}
#profile_home a:hover{
  background: url("http://res.cloudinary.com/hpdnx5ayv/image/upload/v1375811602/homebtn-active_n7xzdo.png") no-repeat center;
}
#profile_photos a{
  background: url("http://res.cloudinary.com/hpdnx5ayv/image/upload/v1375811603/photobtn-default_wyukgi.png") no-repeat center;
}
#profile_photos a:hover{
  background: url("http://res.cloudinary.com/hpdnx5ayv/image/upload/v1375811603/photobtn-active_fkeam2.png") no-repeat center;
}
#profile_friends a{
  background: url("http://res.cloudinary.com/hpdnx5ayv/image/upload/v1375811602/friendsbtn-default_acwlwf.png") no-repeat center;
}
#profile_friends a:hover{
  background: url("http://res.cloudinary.com/hpdnx5ayv/image/upload/v1375811602/friendsbtn-active_zjl9jt.png") no-repeat center;
}
#profile_key_requests a{
  background: url("http://res.cloudinary.com/hpdnx5ayv/image/upload/v1375811603/keyrequestbtn-default_cow1kv.png") no-repeat center;
}
#profile_key_requests a:hover{
  background: url("http://res.cloudinary.com/hpdnx5ayv/image/upload/v1375811603/keyrequestbtn-active_btjwdx.png") no-repeat center;
}
#profile_activity a{
  background: url("http://res.cloudinary.com/hpdnx5ayv/image/upload/v1375811602/activitybtn-default_nszatj.png") no-repeat center;
}
#profile_activity a:hover{
  background: url("http://res.cloudinary.com/hpdnx5ayv/image/upload/v1375811572/activitybtn-active_w91vry.png") no-repeat center;
}
#profile_objects a{
  background: url("http://res.cloudinary.com/hpdnx5ayv/image/upload/v1375811603/objectsbtn-default_mdls5o.png") no-repeat center;
}
#profile_objects a:hover{
  background: url("http://res.cloudinary.com/hpdnx5ayv/image/upload/v1375811603/objectsbtn-active_fmtjj4.png") no-repeat center;
}
#profile_bookmarks a{
  background: url("http://res.cloudinary.com/hpdnx5ayv/image/upload/v1375811602/bookmarkbtn-default_n2c6yp.png") no-repeat center;
  font-size:18px;
}
#profile_bookmarks a:hover{
  background: url("http://res.cloudinary.com/hpdnx5ayv/image/upload/v1375811602/bookmarkbtn-active_csktwe.png") no-repeat center;
}
#profile_home_info_img{
  height:150px;
  width:120px;
  margin:1em;
  padding:0;
  float:left;
}
#profile_home_info_img{
  margin:1em;
}
#profile_home_info_img img{
  height:120px;
  border:1px solid #919191
}
#profile_home_info_img img:hover{
  
  /*float:left;
  border:1px solid #AFAFAF;
  width:100px;
  min-height:100px;
  background:rgba(0,0,0,.50);*/
}
#profile_home_info_wrap{
  /*Need float and width to keep basicInfo borders contained*/
  float:left;
  width:460px;
  background: #1d1d1d;
  margin:1em 0 1em 1em;
  color:#f5f5f5
}
/*this refers to top section of the profile container */
#profileHome_top{

  height:150px;
}
#profile_home_basic_info{
  border-top:1px solid #2c2c2c;
  border-bottom: 1px solid #2c2c2c;
  font-size:15px;
  font-weight:lighter;
  padding:10px 10px 15px 10px;
  
}

#profile_home_basic_info ul li{
  display:inline;
  padding-right: 20px 
}
/* this refers to the bottom section of the profile container */
#profileHome_bottom{
  clear:both;
  background-color: transparent;
  margin: 0 1em;
  // height:400px;
  // overflow-y:auto;
  // overflow-x:hidden;

}
#info_username{
  font-size:15px;
  text-transform:uppercase;
}
div.profile_info_name{
  padding:10px;
}
#profile_info_name{
  font-size:22px;
  text-transform: capitalize;
}
.blueLink{
  color:#0099cb;
  font-weight:lighter;
  font-size:15px;
}
#profile_home_description{
  font-style:italic;
  font-size:16px;
  padding:15px 10px;
  font-weight:lighter;
}

/*General Table CSS for Photos,INS,Activity,etc*/
#profile_home_wrapper th{
  background-color: #5d6567;
  color:white;
  text-align:left;
  font-size:16px;
  font-weight:normal;
  text-transform:uppercase;
  width:100%;
  padding-left:4px;
}
// #profile_home_wrapper 
table.generalGrid{
  // width:100%;
  background-color:#f5f5f5;
  border-collapse:separate;
  border-spacing:10px;
}
#gridItemList{
  background-color: white;
  position:relative;
  overflow-y:scroll;
  width:620px;
  height:585px;

}
#profileHome_activity_header, .profileTableHeader{
  border-collapse:collapse;
  width:620px;
}
.gridItemPicture {
  width:180px;
  height:180px;
  background-size:contain;
  background-repeat: no-repeat;
  background-position: 50% 50%;
}
#gridItemsTest{
  background-color: white;
  display:table-cell;
  width:620px;
  position:relative;
}
.gridItemWrap{
  width:200px;
  background-color: white;
  display:inline-block;
}
.gridItem{
  text-align:center;
  border:1px solid #ebebeb;
  display:inline-block;
  margin:5px;
  
}
/*center the picture*/
.user-photos-view div.gridItem{
  padding:0 10px;
}
.gridItemDescription{
  color:black;
  font-size:12px;
  font-weight:lighter;
}
#profile_close_button_wrap{
  position:absolute;
  right:9px;
  top:10px;
}
#profile_close_button{
  background-image:url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1375811602/close-btn_gkzdgt.png');
  background-position: 0 0;
  display:block;
  height:14px;
  width:14px;
}
#profile_collapse_arrow{
  position:absolute;
  right:0;
  left:50%;
  margin-left:-9px;
  top:50%;
}
/*image holders for profile friends, requests, and suggestions*/
div.profile_friend_image_holder, .profile_request_single_image_holder, 
.profile_friend_suggestion_single_image_holder, {
   width:70px;
   height:70px;
   background-size:contain;
   background-repeat: no-repeat;
   background-position: 50% 50%;
   border:1px solid #e2e2e2;
}

#profile_small_user_picture{
  height:70px;
  padding:1em;
}

.profile_friend_gear{
  padding:0;
  border:0;
}
.profile_friend_button{
  padding-right:20px;
}

/*PROFILE Media Queries*/
//@media screen and (max-height:720px){
//  .profileHome_activity #gridItemList{
//    height:365px;
//  }
//}
//@media screen and (max-height:650px){
//  .profileHome_activity #gridItemList{
//    height:335px;
//  }
//
//  .gridItemPicture{
//    height:160px;
//  }
//
//  .profileActivity_activity #gridItemList, .profile_objects_view .profileHome_activity #gridItemList,
//   .profile_bookmarks_view .profileHome_activity #gridItemList{
//    height:450px;
//  }
//}

